<resources>    
    <string name="app_name">Firebase Chat</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out"> Logout</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Register</string>
    <string name="sign_in_return">Return to login</string>
    <string name="fresh_config">Fresh Config</string>  
    <string name="cause_crash">Cause Crash</string>
    <string name="about">About</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="account">Account (Email)</string>
    <string name="password">Password</string>
    <string name="chkpassword">Confirm password</string>
    <string name="username">Username</string>
    <string name="plz_input_username">Please enter your name</string>
    <string name="plz_input_accout">Please enter your account</string>
    <string name="plz_input_pw">Please enter your password</string>
    <string name="plz_input_chkpw">Please enter the password again to confirm</string>
    <string name="plz_input_chkpw_again">Different with your password</string>
    <string name="sign_up_here">Register your account here</string>
    <string name="registering">Registering...</string>
    <string name="logining_in">Loging in...</string>
    <string name="timeFormat">h:mm a</string>
    <string name="closeMSG">Please tap BACK again to exit</string>
    <string name="chat">Chat</string>
    <string name="friend">Friends</string>
    <string name="setting">Setting</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="noChat">You Don\'t have any chats</string>
    <string name="noFriend">You Don\'t have any friends</string>
    <string name="today">Today</string>
    <string name="exit">Exit</string>
    <string name="signup_success">Register successfully, you can sign in with the new account</string>
    <string name="signin_failed">Sign in failed! Please check your email/password</string>
    <string name="authentication_failed">Authentication failed!</string>
    <string name="Google_server_error">Google Play Services error.</string>
    <string name="about_message">Version: 1.0.0 \nAuthor: 資工三年級</string>
    <string name="send_image">&#160;Sent a Photo</string>
    <string name="send_sticker">&#160;Sent a Sticker</string>
    <string name="msg_err">Something Error!</string>
    <string name="you">You</string>
    <string name="group_search_hint">Input friend\'s name to search</string>
    <string name="create_group">Create Group</string>
    <string name="no_found">No Found!</string>
    <string name="group_name">Input group\'s name</string>
    <string name="kick_out">Kick out</string>
    <string name="kick_msg">Are you sure kick %s out?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="add_to_group">Add to group</string>
    <string name="search_friend">Search</string>
    <string name="search_friend_hint">Input friend\'s Email</string>
    <string name="add_friend">Add Friend</string>
    <string name="already_friends">You are already friends!</string>
    <string name="yourself">It\'s yourself!</string>
    <string name="lonely_group">This group has no member except of you!</string>
    <string name="someone_send_picture"> send a picture.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="can">can message</string>
    <string name="picture">picture</string>
    <string name="canhint">input your can message</string>
    <string name="open_can">open</string>
    <string name="can_close" >close</string>
</resources>