<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/noItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchbar"
        android:text="@string/no_found"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <ListView
        android:id="@+id/friendsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/create_group"
        android:layout_below="@id/searchbar">

    </ListView>

    <LinearLayout
        android:id="@+id/searchbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext">

                <EditText
                    android:id="@+id/friendSearchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:background="@null"
                    android:hint="@string/group_search_hint"
                    android:padding="10dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp" />

                <Button
                    android:id="@+id/clearAll"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    android:background="@drawable/ic_clear_black_24dp" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/holo_gray_light" />

    </LinearLayout>

    <Button
        android:id="@+id/create_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/create_group" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>